--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
   },
   "homepage": "https://github.com/Cyaxeres/ID-Info-Tracker#readme",
   "dependencies": {
+    "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.7",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "multer": "^1.3.1"
   }
 }
