--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
   },
   "homepage": "https://github.com/Cyaxeres/ID-Info-Tracker#readme",
   "dependencies": {
-    "bcrypt": "^3.0.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.3.0",
-    "mongoose": "^5.2.7",
-    "morgan": "^1.9.0",
+    "mongoose": "^5.4.10",
+    "morgan": "^1.9.1",
     "multer": "^1.3.1"
   }
 }
